test/bad/generators/generator01.px

func* f(Int x) Int def
    return x

f(0)
